--- a/.github/workflow/build.yml
+++ b/.github/workflow/build.yml
@@ -8,6 +8,7 @@ jobs:
   say-hello:
     runs-on:ubuntu-latest
     steps:
+      -name: echoing some information
       -run: echo "hello world"
       -name: Checkout
        uses: actions/checkout@3.5.3
